# spotisync

./: .gitignore  .gitmodules  CMakeLists.txt
protos/: spotisync.proto
src/: client.cpp  client.hpp  main.cpp  resource.hpp  spotify.hpp  spotifyupdate.cpp  spotifyupdate.hpp  track.cpp  track.hpp
